--- a/acesso-negado.html
+++ b/acesso-negado.html
@@ -51,7 +51,7 @@
   <div class="container">
     <h1>Acesso Negado</h1>
     <p>Você não tem permissão para acessar esta página.</p>
-    <a href="login.html">Voltar para o login</a>
+    <a href="index.html">Voltar para o login</a>
   </div>
 </body>
 </html>
