--- a/servicos.html
+++ b/servicos.html
@@ -2,34 +2,147 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Serviços | Meu Site</title>
-  <link rel="stylesheet" href="principal.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Login Page</title>
+  <link rel="stylesheet" href="login.css">
+  <style>
+    /* Estilo das abas */
+    .tabs {
+      display: flex;
+      justify-content: space-between;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 8px;
+      overflow: hidden;
+      margin-bottom: 20px;
+    }
+
+    .tab {
+      flex: 1;
+      padding: 10px 0;
+      text-align: center;
+      cursor: pointer;
+      color: white;
+      font-weight: 500;
+      transition: all 0.3s ease;
+    }
+
+    .tab.active {
+      background: #0d3b8b;
+      font-weight: bold;
+    }
+
+    .tab:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+  </style>
 </head>
 <body>
 
-<video autoplay muted loop id="bg-video">
+<!-- Vídeo de fundo -->
+<video autoplay muted loop class="background-video">
   <source src="pixverse2F_1745717507.mp4" type="video/mp4">
 </video>
 
-<div class="overlay"></div>
+<!-- Conteúdo principal -->
+<div class="container">
+  <div class="card">
+    <div class="welcome-section">
+      <h1>Bem-vindo!</h1>
+      <p>Mude o planeta, começe a mudança em casa.</p>
+      <a href="educacao.html" class="learn-more-btn">Saiba Mais</a>
+    </div>
 
-<header>
-  <div class="logo">MeuSite</div>
-  <nav>
-    <ul>
-      <li><a href="index.html">Início</a></li>
-      <li><a href="sobre.html">Sobre</a></li>
-      <li><a href="servicos.html">Serviços</a></li>
-      <li><a href="contato.html">Contato</a></li>
-    </ul>
-  </nav>
-</header>
+    <div class="login-section">
+      <!-- Abas -->
+      <div class="tabs">
+        <div class="tab active" onclick="showForm('empresa')">Empresa</div>
+        <div class="tab" onclick="showForm('pessoal')">Pessoal</div>
+      </div>
 
-<main class="main-content">
-  <h1>Nossos Serviços</h1>
-  <p>Oferecemos soluções sustentáveis para sua casa e sua empresa.</p>
-</main>
+      <!-- Formulário Empresa -->
+      <form action="cadastro.php" method="post" id="form-empresa">
+        <div class="input-group">
+          <label for="razao">Razão Social:</label>
+          <input type="text" id="razao" name="razao" placeholder="Tech Vision Soluções Digitais LTDA">
+        </div>
 
+        <div class="input-group">
+          <label for="cnpj">CNPJ:</label>
+          <input type="text" id="cnpj" name="cnpj" placeholder="00.000.000/0000-00">
+        </div>
+
+        <div class="input-group">
+          <label for="responsavel">Nome do Responsável:</label>
+          <input type="text" id="responsavel" name="responsavel" placeholder="Marcos Oliveira">
+        </div>
+
+        <div class="input-group">
+          <label for="cpf">CPF do Responsável:</label>
+          <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00">
+        </div>
+
+        <div class="input-group">
+          <label for="email">E-mail da empresa:</label>
+          <input type="email" id="email" name="email" placeholder="contato@empresa.com">
+        </div>
+
+        <div class="input-group">
+          <label for="phone">Telefone comercial:</label>
+          <input type="tel" id="phone" name="phone" placeholder="(00) 0000-0000">
+        </div>
+
+        <div class="input-group">
+          <label for="password">Senha:</label>
+          <input type="password" id="password" name="password" placeholder="***********">
+        </div>
+
+        <button type="submit" class="submit-btn">Continuar</button>
+      </form>
+
+      <!-- Formulário Pessoal -->
+      <form action="cadastro.php" method="post" id="form-pessoal" style="display: none;">
+        <div class="input-group">
+          <label for="username">Nome Completo:</label>
+          <input type="text" id="username" name="username" placeholder="Sidney Sabino">
+        </div>
+
+        <div class="input-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" placeholder="exemplo@gmail.com">
+        </div>
+
+        <div class="input-group">
+          <label for="password">Senha:</label>
+          <input type="password" id="password" name="password" placeholder="***********">
+        </div>
+
+        <div class="input-group">
+          <label for="confirm-password">Confirmar Senha:</label>
+          <input type="password" id="confirm-password" name="confirm_password" placeholder="***********">
+        </div>
+
+        <div class="input-group">
+          <label for="phone">Telefone:</label>
+          <input type="tel" id="phone" name="phone" placeholder="(00) 00000-0000">
+        </div>
+
+        <button type="submit" class="submit-btn">Continuar</button>
+      </form>
+    </div>
+  </div>
+</div>
+
+<script>
+function showForm(type) {
+  document.getElementById("form-empresa").style.display = type === "empresa" ? "block" : "none";
+  document.getElementById("form-pessoal").style.display = type === "pessoal" ? "block" : "none";
+
+  document.querySelectorAll(".tab").forEach(tab => tab.classList.remove("active"));
+document.querySelector(`.tab:nth-child(${type === "empresa" ? 1 : 2})`).classList.add("active");
+
+}
+</script>
+
+<script src="cadastro.js"></script>
 </body>
 </html>
